name:                hjsonrpc
version:             0.1.0.0
synopsis:            Libreria JSON-RPC para implementar servidores y clientes
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Aeson.JsonRpc
                     , Data.Aeson.JsonUtils
                     , Network.Constants
                     , Network.JsonRpcConn
                     , Network.JsonRpcCliTcp
                     , Network.JsonRpcCliIpc
  build-depends:       base >=4 && <5
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , json-rpc
                     , monad-logger
                     , monad-control
                     , network
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -Wall
  build-depends:        base >= 4 && <= 5
                      , aeson
                      , bytestring
                      , hjsonrpc
                      , hspec == 2.*
                      , text
                      , unordered-containers
                      , vector
  other-modules:        Data.Aeson.JsonRpcSpec
  default-language:     Haskell2010

